fix: skill graphics on about page text overlap

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -79,8 +79,9 @@
   text-align: center;
 
   .skill-graphic {
-    font-size: 5rem;
+    font-size: 3rem;
     display: block;
+    padding-bottom: 1rem;
   }
 }
 
